Keep track of each shared memory object's protection when deciding whether to return our existing port https://bugs.webkit.org/show_bug.cgi?id=143687

Reviewed by Tim Horton.

* Platform/SharedMemory.h:
* Platform/mac/SharedMemoryMac.cpp:
(WebKit::machProtection):
(WebKit::SharedMemory::create):
(WebKit::SharedMemory::map):
(WebKit::SharedMemory::createHandle):

Canonical link: https://commits.webkit.org/161728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182774 268f45cc-cd09-0410-ab3c-d52691b4dbfc